[gd_scene load_steps=5 format=3 uid="uid://b1vq2pef4a483"]

[ext_resource type="Script" path="res://scenes/ui/defence_ui.gd" id="1_c54x8"]
[ext_resource type="Texture2D" uid="uid://bnoe21latb3a8" path="res://kenney_roguelike-characters/Spritesheet/block.png" id="1_p6hof"]
[ext_resource type="Texture2D" uid="uid://rgggr0jxghp0" path="res://kenney_roguelike-characters/Spritesheet/cross.png" id="3_uyrbt"]
[ext_resource type="Texture2D" uid="uid://b37igis3xuqc2" path="res://kenney_roguelike-characters/Spritesheet/question.png" id="4_6ak3t"]

[node name="DefenceUI" type="HBoxContainer"]
offset_right = 184.0
offset_bottom = 184.0
script = ExtResource("1_c54x8")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="BlockIcon" type="TextureRect" parent="VBoxContainer"]
custom_minimum_size = Vector2(90, 90)
layout_mode = 2
texture = ExtResource("1_p6hof")

[node name="BlockStatus" type="TextureRect" parent="VBoxContainer"]
custom_minimum_size = Vector2(90, 90)
layout_mode = 2
texture = ExtResource("3_uyrbt")
expand_mode = 1
stretch_mode = 5

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="QuestionIcon" type="TextureRect" parent="VBoxContainer2"]
custom_minimum_size = Vector2(90, 90)
layout_mode = 2
texture = ExtResource("4_6ak3t")
expand_mode = 1
stretch_mode = 5

[node name="QuestionStatus" type="TextureRect" parent="VBoxContainer2"]
custom_minimum_size = Vector2(90, 90)
layout_mode = 2
texture = ExtResource("3_uyrbt")
expand_mode = 1
stretch_mode = 5
